# Always_Be_Coloring

./: .env.example  .env.local.example  .gitignore  CLAUDE.md  LICENSE  README.md  main.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.ts  tsconfig.tsbuildinfo
.claude/: settings.local.json
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
.next/cache/: .tsbuildinfo
.next/server/: app-paths-manifest.json  middleware-build-manifest.js  middleware-manifest.json  server-reference-manifest.json
data/: memory.db
data/output/: 2026-04-12_themes.json
data/previews/: 2026-04-12_gumroad_preview.json
src/: middleware.ts
src/app/: layout.tsx  page.tsx
src/lib/: auth.ts  formats.ts  mock-data.ts  plans.ts  stripe.ts  utils.ts
src/store/: useColorBookStore.ts
src/styles/: globals.css
src/types/: index.ts
tests/: test_ip_sanitizer.py  test_job_runner_smoke.py  test_nlp_runtime.py  test_normalizer.py
trend_pipeline/: __init__.py  config.py  nlp_runtime.py  pipeline_cli.py
trend_pipeline/config/: generalization_rules.json  page_idea_templates.json
trend_pipeline/filtering/: content_filter.py
trend_pipeline/ingestion/: base_ingester.py  google_trends_ingester.py  reddit_ingester.py  rss_ingester.py  twitter_ingester.py
trend_pipeline/memory/: memory_store.py
trend_pipeline/output/: json_writer.py
trend_pipeline/processing/: normalizer.py  (+1 more)
(+172 files in other folders)
